--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
     margin-top: 100px;
 }
 
-.question-1 {
+.question-1, .question-2, .question-3, .question-4, .question-5 {
     width: 350px;
     height: 150px;
     margin-left:auto;
